# ArchivedDataCodec

./: .gitattributes  .gitignore  ADC_Aur_1.2.1.0 byte-key test.py  ADC_Aur_1.2.1.2.py  ADC_Aur_1.2.1.3.py  ADC_Aur_1.2.1.4.py  ADC_Aur_1.2.1.9.py  ADC_Aur_1.2.2.2.py  ADC_Aur_1.2.2.3.py  ADC_Aur_1.2.3.0.py  ADC_Aur_1.2.4.0.py  ADC_Aur_1.2.4.1.py  ADC_Aur_1.2.5.0.py  ADC_Aur_1.2.5.1.py  ADC_Aur_1.2.5.2.py  ADC_Aur_1.2.5.3.py  ADC_Aur_1.2.5.4.py  ADC_Aur_1.2.5.5.py  ADC_Aur_2025.04.1.py  ADC_Aur_2025.05.2.py  ADC_Aur_2025.06.1.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_AGPLv3  Makefile  README.md  SECURITY.md  TODO.md  adc.py  autocomp (OUTDATED).py  autocomp.py  comp.txt  comp_cmd.txt  pyproject.toml  pytest.ini  readme.txt  requirements.txt  runtime.txt
.github/: FUNDING.yml  downloads.json
1.2.0alpha(Do Not Use)/: ADC Archiver 1.2.0alphabuildnum1.0.py.txt  readme.txt
com/: README.txt  leshie_compiler.bat  leshie_compiler.sh
community/: contributors.txt
dev/: ADC Archiver 1.2.0.py  readme.txt
docs/: After Note 1.0.0.rtf  After Note 1.1.0.rtf  CHANGELOG.md  CONTRIBUTING.md  FORMAT.md  License 1.0.0.rtf  SECURITY.md  TODO.md  license 1.0.0.md  mailinglist_rules.md  pastetest.html
legacy/: ADC_Aur_1.2.1.6.py  ADC_Aur_1.2.1.7.py  ADC_Aur_1.2.1.8.py  ADC_Aur_1.2.2.1.py  ADC_Aur_1.2.4.1.py  ADC_Aur_1.2.5.3.py  ADC_Aur_2025.04.2.py  ADC_Aur_2025.05.1.py  ADC_Aur_2025.05.2.py  ADC_Aur_2025.07.1.py  ADC_Aur_2025.10.1.py  ADC_Aur_2025.3.1.py  ADC_Aur_2026.02.1.py
libraries/: create.py  extract.py  info.py  programboot.py
src/: adc.py  (+9 more)
(+86 files in other folders)
