[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adc"
version = "1.4.5"
description = "ADC Archiver project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Mealman1551"}
]

dependencies = [
    "colorama",
    "cryptography",
    "progress",
    "cffi"

]