[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adc"
version = "dev"
description = "ADC Archiver utility"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Nathan du Buy"}
]

dependencies = [
    "colorama",
    "cryptography",
    "py7zr",
    "progress",
    "cffi"
]